daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N26_bad_leak_value/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a76365840a3023b117d4d2438ba781318e64bd374cfb9d19c4bc3bba110f61fac0dc61e176c906171829ca26187f2fdbbe1b774021a98e63b2416b5ecc22e12fa1e0d5272
